#VERSION 0.7.99#

*  Peak_Zreflection > added, fixed and tweaked some methods. 

*  Peak_Config > added method getVars()

*  Peak_View_Theme > moved method getFunctionsFile() to Peak_View. Fixed Peak_View_Render_Partials 
                     and Peak_View_Render_Layouts accordly.

*  Peak_View > rename properties $vars to $_vars, $theme to $_theme and $view_engine to $_engine. 
               'Layouts' is now the default rendering engine

*  Peak_Xml > fix issue with curl_get_content() method

*  Peak_Controller_Action > added method redirect() that point to Peak_Controller_Front method. 

*  Peak_Controller_Front > added method redirect() we can now redirect to an other controller and/or action 
                           inside application controllers.

*  Peak_Router > added method setRequest(), usefull for setting manually a routing request array

*  Peak_Controller_Action > deprecated method view()

*  Peak_Application > added method render(). this method point to front->controller->render(). This simplify the application
                      index so we can do $app->render(); after $app->run(); instead of $app->front->controller->render();

*  Peak_Controller_Front > added method postDispatch()

*  Peak_Controller become Peak_Controller_Action

*  Peak_Controller > removed zendAction() and isZendAction(). fixed handleAction() and 
                     listActions() accordly to that change

*  Peak_Application > property $controller replaced by $front that point to Peak_Controller_Front.
                      This object don't access anymore to Peak_Router object
                      Removed deprecated method validSession().
                      Now, Peak_Application do what it suppose to do: start mvc, bootstrap and delegate 
                      controller dispatching process to Peak_Controller_Front.
                      

*  added Peak_Controller_Front > moved dispatching logic of Peak_Application in this new object


#VERSION 0.7.98#
