@@ -1,5 +1,7 @@
 #VERSION 0.7.99#
 
+*  Peak_Controller_Action > remove deprecated method view()
+
 *  Peak_Zreflection > added, fixed and tweaked some methods. 
 
 *  Peak_Config > added method getVars()
